--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^9",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.17.2",
